fix(scrollbar): remove custom scrollbar

--- a/client/components/cards/cardDetails.styl
+++ b/client/components/cards/cardDetails.styl
@@ -104,10 +104,6 @@ avatar-radius = 50%
   .mCustomScrollBox
     padding-left: 0
 
-  .ps-scrollbar-y-rail
-    pointer-event: all
-    position: absolute
-
   .card-details-canvas
     width: 470px
     padding-left: 20px
